--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -197,7 +197,25 @@
     <add key="GetVehiculoId" value="api/equipotransporte/buscar/vehiculo/" />
     <add key="PutModificarVehiculo" value="api/equipotransporte/modificar/vehiculo" />
     <add key="PostRegistrarVehiculo" value="api/equipotransporte/registrar/vehiculo" />
-    <add key="PutEliminarVehiculo" value="api/equipotransporte/eliminar/vehiculo/" />   
+    <add key="PutEliminarVehiculo" value="api/equipotransporte/eliminar/vehiculo/" />
+
+    <add key="GetRecargasCombustible" value="api/equipotransporte/buscar/recargascombustible/" />
+    <add key="PutModificarRecargaCombustible" value="api/equipotransporte/modificar/recargacombustible" />
+    <add key="PostRegistrarRecargaCombustible" value="api/equipotransporte/registrar/recargacombustible" />
+    <add key="PutEliminaRecargaCombustible" value="api/equipotransporte/eliminar/recargacombustible" />
+    
+    <add key="GetAsigancion" value="api/equipotransporte/buscar/asignacion" />
+    <add key="PostRegistrarAsignacion" value="api/equipotransporte/registrar/asignacion" />
+    <add key="PutEliminaAsignacion" value="api/equipotransporte/eliminar/asignacion/" />
+    
+    <add key="GetMantenimiento" value="api/equipotransporte/buscar/mantenimiento" />
+    <add key="PostRegistrarMantenimiento" value="api/equipotransporte/registrar/mantenimiento" />
+    <add key="PutEliminaMantenimiento" value="api/equipotransporte/eliminar/mantenimiento/" />
+    
+    <add key="GetMantenimientoDetalle" value="api/equipotransporte/buscar/mantenimientodetalle" />
+    <add key="PostRegistrarMantenimientoDetalle" value="api/equipotransporte/registrar/mantenimientodetalle" />
+    <add key="PutModificarMantenimientoDetalle" value="api/equipotransporte/modificar/recargacombustible" />
+    <add key="PutEliminaMantenimientoDetalle" value="api/equipotransporte/eliminar/recargacombustible" />
     <!-- EquipoTransporte -->
     <!-- Combustible -->
     <add key="GetListaCCombustible" value="api/catalogos/consulta/combustible" />
@@ -205,8 +223,9 @@
     <add key="PutCCombustibleFiltro" value="api/catalogos/buscar/combustiblefilter" />
     <add key="GetCCombustibleID" value="api/catalogos/consulta/combustibleid/" />    
     <add key="PostRegistraCombustible" value="api/catalogos/registra/combustible" />
-    <add key="PutModificaCombustible" value="api/catalogos/modifica/combustible" />
-    <add key="PutEliminaCombustible" value="api/catalogos/elimina/combustible/" />
+    <add key="PutModificaCombustible" value="api/catalogos/modifica/combustible" />    
+    <add key="PutEliminaCombustible" value="api/catalogos/elimina/combustible/" />    
+  
     <!-- Combustible -->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
