--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11583,14 +11583,14 @@
     <Content Include="Views\Remanente\_cbPuntosventaPartial.cshtml" />
     <Content Include="Views\EquipoTransporte\Index.cshtml" />
     <Content Include="Views\Combustible\Index.cshtml" />
+    <Content Include="Views\Mantenimiento\Index.cshtml" />
+    <Content Include="Views\RecargaCombustibles\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="assets\plugins\bootstrap-select\Respaldo\css\" />
     <Folder Include="assets\plugins\bootstrap-select\Respaldo\js\i18n\" />
     <Folder Include="Servicios\" />
-    <Folder Include="Views\Mantenimiento\" />
-    <Folder Include="Views\RecargaCombustibles\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
