CJAL-05/02/2019-Correcion Issues Pedidos y Cobranza Finalizados

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -187,6 +187,7 @@
     <!-- Pedidos -->
     <!-- Cobranza -->
     <add key="GetListaCargos" value="api/cobranza/buscar/listacargos/" />
+    <add key="GetListaCRecuperada" value="api/cobranza/buscar/listacrecuperada/" />
     <add key="GetCargoId" value="api/cobranza/buscar/cargos/" />
     <add key="PostRegistrarAbono" value="api/cobranza/registrar/abono" />
     <add key="PostRegistrarAbonosLst" value="api/cobranza/registrar/abonos" />
