CJAL-11/02/2019-Correccion bugs Pedidos

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -192,6 +192,7 @@
     <add key="PostRegistrarAbono" value="api/cobranza/registrar/abono" />
     <add key="PostRegistrarAbonosLst" value="api/cobranza/registrar/abonos" />
     <add key="PutListaCartera" value="api/cobranza/buscar/carteravencida" />
+    <add key="PutCreditoRecuperado" value="api/cobranza/buscar/carterarecuperada" />
     <!-- Cobranza -->
     <!-- EquipoTransporte -->
     <add key="GetListaEquiposTransporte" value="api/equipotransporte/buscar/listavehiculos/" />
