--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -326,6 +326,7 @@
     <Compile Include="Models\Catalogos\ProveedorDTO.cs" />
     <Compile Include="Models\Catalogos\PuntoVentaModel.cs" />
     <Compile Include="Models\Catalogos\RolMovilVenta.cs" />
+    <Compile Include="Models\Catalogos\RolSistemaVenta.cs" />
     <Compile Include="Models\Catalogos\TipoProveedorDTO.cs" />
     <Compile Include="Models\Catalogos\TipoUnidadModel.cs" />
     <Compile Include="Models\Catalogos\UnidadAlmacenGasDTO.cs" />
@@ -11526,7 +11527,6 @@
     <Content Include="Views\Shared\EditorTemplates\RolCompras.cshtml" />
     <Content Include="Views\Clientes\Index.cshtml" />
     <Content Include="Views\Clientes\Nuevo.cshtml" />
-    <Content Include="Views\Shared\EditorTemplates\Roles.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\RolRequsicion.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\RolMovilCompra.cshtml" />
     <Content Include="Views\Clientes\EditarLocaciones.cshtml" />
@@ -11589,6 +11589,7 @@
     <Content Include="Views\Combustible\Index.cshtml" />
     <Content Include="Views\Mantenimiento\Index.cshtml" />
     <Content Include="Views\RecargaCombustibles\Index.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\RolSistemaVenta.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
