JSA - Cambios y ajustes
Se agrega campo EsForaneo a petición del cliente
Se agrega campos CapacidadKg y CapacidadLt por corrección

Se adapta flujos para creación de almacenes  para pipa y camioneta

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -120,6 +120,7 @@
     <add key="PostRegistraLineaProducto" value="api/catalogos/registra/linea/producto" />
     <add key="PutModificaLineaProducto" value="api/catalogos/modifica/linea/producto" />
     <add key="PutEliminaLineaProducto" value="api/catalogos/elimina/linea/producto" />
+    <add key="GetObtenerMedidores" value="api/catalogos/obtener/medidores" />
     <!--Catalogos-->
     <!--Requisicion-->
     <add key="GetRequisicionEstatus" value="api/requisicion/buscar/requisicion/estatus" />
