JSA - Ajustes asignación

--- a/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
+++ b/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
@@ -339,6 +339,7 @@
     <Compile Include="ObjetosValor\Enum\TipoEventoEnum.cs" />
     <Compile Include="ObjetosValor\Enum\TipoMedidorGasEnum.cs" />
     <Compile Include="ObjetosValor\Enum\TipoMovimientoEnum.cs" />
+    <Compile Include="ObjetosValor\Enum\TipoOperadorChoferEnum.cs" />
     <Compile Include="ObjetosValor\Enum\TipoPersonaFiscalEnum.cs" />
     <Compile Include="ObjetosValor\Enum\TipoProveedorEnum.cs" />
     <Compile Include="ObjetosValor\Enum\TipoUnidadAlmacenGasEnum.cs" />
