--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -22,7 +22,12 @@
     <add key="GuardarLogoEmpresa" value="~/LogosEmpresa" />
     <add key="RutaTemporal" value="~/App_Data" />
     <!--URL del WebApp-->
+    <!--Facturacion-->
+    <add key="Usuario" value="LAN7008173R5"/>
+    <add key="Contrasena" value="LAN7008173R5"/>
+    <add key="RFC" value="LAN7008173R5"/>
 
+    <!--Facturacion-->
     <!--IMÁGENES-->
     <add key="ImagenesDiasVigencia" value="93" />
     <add key="RutaImagenesInventario" value="~/Imagenes/Inventario" />
