--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/app.config
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/app.config
@@ -3,6 +3,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Application.MainModule.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -22,4 +25,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework> 
+  <system.serviceModel>
+    <bindings />
+    <client />
+  </system.serviceModel>
+  <applicationSettings>
+    <Application.MainModule.Properties.Settings>
+      <setting name="Application_MainModule_com_admingest_WsFactAdmingestControllerService"
+        serializeAs="String">
+        <value>https://admingest.com/sistema/wsFactAdmingest/ws?ws=1</value>
+      </setting>
+    </Application.MainModule.Properties.Settings>
+  </applicationSettings>
 </configuration>
