--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -23,9 +23,10 @@
     <add key="RutaTemporal" value="~/App_Data" />
     <!--URL del WebApp-->
     <!--Facturacion-->
-    <add key="Usuario" value="LAN7008173R5"/>
-    <add key="Contrasena" value="LAN7008173R5"/>
-    <add key="RFC" value="LAN7008173R5"/>
+    <add key="Usuario" value="LAN7008173R5" />
+    <add key="Contrasena" value="LAN7008173R5" />
+    <add key="RFC" value="LAN7008173R5" />
+    <add key="VersionCFDI" value="3.3" />
 
     <!--Facturacion-->
     <!--IMÁGENES-->
