JSA Correccion y Avance
Avance en Facturacion
Correccion en Recarga de combustible

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -228,9 +228,13 @@
     <add key="GetCCombustibleID" value="api/catalogos/consulta/combustibleid/" />    
     <add key="PostRegistraCombustible" value="api/catalogos/registra/combustible" />
     <add key="PutModificaCombustible" value="api/catalogos/modifica/combustible" />    
-    <add key="PutEliminaCombustible" value="api/catalogos/elimina/combustible/" />    
-  
+    <add key="PutEliminaCombustible" value="api/catalogos/elimina/combustible/" />     
     <!-- Combustible -->
+    <!--Facturacion-->
+    <add key="PostRegistrarCFDILst" value="api/facturacion/registrar/factruas" />
+    <add key="PostRegistrarCFDI" value="api/facturacion/registrar/factrua" />
+    <!--Facturacion-->
+    
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
