--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11617,6 +11617,10 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\1.3Application\1.3.2MainModule\Application.MainModule\Application.MainModule.csproj">
+      <Project>{2C5F9775-06CF-466F-9873-3166EDE4744C}</Project>
+      <Name>Application.MainModule</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\1.5Infrastructure\1.5.2Cross Cutting\1.5.2.4Exceptions\Exceptions.MainModule\Exceptions.MainModule.csproj">
       <Project>{FB4086F4-8177-4175-BEB6-312FD528ABA2}</Project>
       <Name>Exceptions.MainModule</Name>
