JAS- Avance ajustes
Busquedas terminadas

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -1,4 +1,5 @@
-﻿<?xml version="1.0"?><!--
+﻿<?xml version="1.0"?>
+<!--
   Para obtener más información acerca de cómo configurar una aplicación ASP.NET, consulte
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
@@ -206,15 +207,15 @@
     <add key="PutModificarRecargaCombustible" value="api/equipotransporte/modificar/recargacombustible" />
     <add key="PostRegistrarRecargaCombustible" value="api/equipotransporte/registrar/recargacombustible" />
     <add key="PutEliminaRecargaCombustible" value="api/equipotransporte/eliminar/recargacombustible" />
-    
+
     <add key="GetAsigancion" value="api/equipotransporte/buscar/asignacion" />
     <add key="PostRegistrarAsignacion" value="api/equipotransporte/registrar/asignacion" />
     <add key="PutEliminaAsignacion" value="api/equipotransporte/eliminar/asignacion" />
-    
+
     <add key="GetMantenimiento" value="api/equipotransporte/buscar/mantenimiento" />
     <add key="PostRegistrarMantenimiento" value="api/equipotransporte/registrar/mantenimiento" />
     <add key="PutEliminaMantenimiento" value="api/equipotransporte/eliminar/mantenimiento/" />
-    
+
     <add key="GetMantenimientoDetalle" value="api/equipotransporte/buscar/mantenimientodetalle" />
     <add key="PostRegistrarMantenimientoDetalle" value="api/equipotransporte/registrar/mantenimientodetalle" />
     <add key="PutModificarMantenimientoDetalle" value="api/equipotransporte/modificar/mantenimientodetalle" />
@@ -225,21 +226,25 @@
     <add key="GetCCombustibleIdEmpr" value="api/catalogos/consulta/combustibleidempresa/" />
     <add key="GetTiposUnidad" value="api/catalogos/consulta/tipounidadidempresa/" />
     <add key="PutCCombustibleFiltro" value="api/catalogos/buscar/combustiblefilter" />
-    <add key="GetCCombustibleID" value="api/catalogos/consulta/combustibleid/" />    
+    <add key="GetCCombustibleID" value="api/catalogos/consulta/combustibleid/" />
     <add key="PostRegistraCombustible" value="api/catalogos/registra/combustible" />
-    <add key="PutModificaCombustible" value="api/catalogos/modifica/combustible" />    
-    <add key="PutEliminaCombustible" value="api/catalogos/elimina/combustible/" />     
+    <add key="PutModificaCombustible" value="api/catalogos/modifica/combustible" />
+    <add key="PutEliminaCombustible" value="api/catalogos/elimina/combustible/" />
     <!-- Combustible -->
-    
+
     <!--Facturacion-->
     <add key="PostRegistrarCFDILst" value="api/facturacion/registrar/factruas" />
-    <add key="PostRegistrarCFDI" value="api/facturacion/registrar/factrua" />    
+    <add key="PostRegistrarCFDI" value="api/facturacion/registrar/factrua" />
     <add key="GetTicket" value="api/facturacion/buscar/ticket/" />
     <add key="GetTicketsByCliente" value="api/facturacion/buscar/tickets/cliente/" />
     <add key="GetTicketsByRFC" value="api/facturacion/buscar/tickets/rfc/" />
 
+    <add key="GetCFDI" value="api/facturacion/buscar/cfdi/" />
+    <add key="GetCFDIByCliente" value="api/facturacion/buscar/cfdi/cliente/" />
+    <add key="GetCFDIByRFC" value="api/facturacion/buscar/cfdi/rfc/" />
+
     <!--Facturacion-->
-    
+
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
