Jsa - Avance Facturacion

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -10783,6 +10783,7 @@
     <Content Include="Resources\js\Cobranza.js" />
     <Content Include="Resources\js\Empresas.js" />
     <Content Include="Resources\js\lib\Events.js" />
+    <Content Include="Resources\js\Facturacion.js" />
     <Content Include="Resources\js\lib\jquery-1.9.1.js" />
     <Content Include="Resources\js\ParqueVehicular.js" />
     <Content Include="Resources\js\Pedidos.js" />
