JSA - Avance Facturacion y actualizacion edmx

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -78,7 +78,9 @@
     <add key="GetClientes" value="api/catalogos/clientes/listaclientes" />
     <add key="GetCliente" value="api/catalogos/cliente/buscar/" />
     <add key="PostRegistraClientes" value="api/catalogos/registra/cliente" />
-    <add key="PutModificaClientes" value="api/catalogos/modifica/cliente" />
+    <add key="PutModificaClientes" value="api/catalogos/modifica/cliente" />    
+    <add key="PostRegistraClientesAutoConsumo" value="api/catalogos/registra/cliente/autoconsumo" />
+    <add key="PutModificaClientesAutoConsumo" value="api/catalogos/modifica/client/autoconsumo" />    
     <add key="PutEliminaClientes" value="api/catalogos/elimina/cliente/" />
     <add key="PostRegistraClienteLoc" value="api/catalogos/registra/clientelocacion" />
     <add key="GetListaLocacion" value="api/catalogos/clientes/listaclientesloc/" />
