JAH- Avance Historico Ventas

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/DS.MainModule.csproj
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/DS.MainModule.csproj
@@ -282,6 +282,7 @@
     <Compile Include="Controllers\ComprasController.cs" />
     <Compile Include="Controllers\EquipoTransporteController.cs" />
     <Compile Include="Controllers\FacturacionController.cs" />
+    <Compile Include="Controllers\HistoricoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PedidosController.cs" />
     <Compile Include="Controllers\RequisicionController.cs" />
