JSA - Avance Portal

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -125,6 +125,8 @@
     <add key="PutModificaLineaProducto" value="api/catalogos/modifica/linea/producto" />
     <add key="PutEliminaLineaProducto" value="api/catalogos/elimina/linea/producto" />
     <add key="GetObtenerMedidores" value="api/catalogos/obtener/medidores" />
+    <add key="GetListaMetodosPago" value="api/catalogos/consulta/metodospago" />
+    <add key="GetListaUsoCFDI" value="api/catalogos/consulta/usocfdi" />
     <!--Catalogos-->
     <!--Requisicion-->
     <add key="GetRequisicionEstatus" value="api/requisicion/buscar/requisicion/estatus" />
