--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/packages.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/packages.config
@@ -6,6 +6,9 @@
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.es" version="6.1.3" targetFramework="net452" />
+  <package id="ExcelDataReader" version="3.4.1" targetFramework="net452" />
+  <package id="ExcelDataReader.DataSet" version="3.4.1" targetFramework="net452" />
+  <package id="ExcelDataReader-OptionalStreams" version="3.4.1" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net452" />
