JAH - Avance HistoricoVentas - Vistas

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11616,6 +11616,7 @@
     <Content Include="Views\Shared\EditorTemplates\VentaPuntoVentaDTO.cshtml" />
     <Content Include="Views\Historico\Index.cshtml" />
     <Content Include="Views\Facturacion\DatosCFDI.cshtml" />
+    <Content Include="Views\Historico\HistoricoVentas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
