JSA Avance historico de ventas
Constructor JSON

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -140,6 +140,7 @@
     <Compile Include="DTOs\Facturacion\FacturacionDTO.cs" />
     <Compile Include="DTOs\Facturacion\MetodoPagoDTO.cs" />
     <Compile Include="DTOs\Facturacion\UsoCFDIDTO.cs" />
+    <Compile Include="DTOs\Historico\HistoricoConsultaDTO.cs" />
     <Compile Include="DTOs\Historico\HistoricoVentaDTO.cs" />
     <Compile Include="DTOs\Mobile\AlmacenAlternoDto.cs" />
     <Compile Include="DTOs\Mobile\AnticipoDto.cs" />
