--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -354,6 +354,7 @@
     <Compile Include="Models\Cobranza\AbonosModel.cs" />
     <Compile Include="Models\Cobranza\CargosModel.cs" />
     <Compile Include="Models\Cobranza\CarteraVencidaModel.cs" />
+    <Compile Include="Models\Cobranza\FacturacionGlobalModel.cs" />
     <Compile Include="Models\Cobranza\ReporteModel.cs" />
     <Compile Include="Models\Facturacion\CFDIDTO.cs" />
     <Compile Include="Models\Facturacion\FacturacionModel.cs" />
@@ -11617,6 +11618,7 @@
     <Content Include="Views\Historico\Index.cshtml" />
     <Content Include="Views\Facturacion\DatosCFDI.cshtml" />
     <Content Include="Views\Historico\HistoricoVentas.cshtml" />
+    <Content Include="Views\Cobranza\FacturacionGlobal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
