JAH - historico Ventas - Json para Graficar

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -256,7 +256,8 @@
     <add key="GetHistoricoById" value="api/historico/consultar/historicoventasid/" />
     <add key="PutHistorico" value="api/historico/modificar/historicoventas" />
     <add key="DeleteHistorico" value="api/historico/eleiminar/historicoventas/" />
-    <add key ="GetJsonConsulta" value="api/historico/consulta/json"/>
+    <add key ="GetJsonConsulta" value="api/historico/consultar/json"/>
+    <add key="GetYears" value="api/historico/consultar/years"/>
     <!-- HistoricoVentas -->
 
     <add key="vs:EnableBrowserLink" value="false" />
