JSA - Respaldo de avance

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -78,9 +78,9 @@
     <add key="GetClientes" value="api/catalogos/clientes/listaclientes" />
     <add key="GetCliente" value="api/catalogos/cliente/buscar/" />
     <add key="PostRegistraClientes" value="api/catalogos/registra/cliente" />
-    <add key="PutModificaClientes" value="api/catalogos/modifica/cliente" />    
+    <add key="PutModificaClientes" value="api/catalogos/modifica/cliente" />
     <add key="PostRegistraClientesAutoConsumo" value="api/catalogos/registra/cliente/autoconsumo" />
-    <add key="PutModificaClientesAutoConsumo" value="api/catalogos/modifica/client/autoconsumo" />    
+    <add key="PutModificaClientesAutoConsumo" value="api/catalogos/modifica/client/autoconsumo" />
     <add key="PutEliminaClientes" value="api/catalogos/elimina/cliente/" />
     <add key="PostRegistraClienteLoc" value="api/catalogos/registra/clientelocacion" />
     <add key="GetListaLocacion" value="api/catalogos/clientes/listaclientesloc/" />
@@ -240,6 +240,7 @@
     <!--Facturacion-->
     <add key="PostRegistrarCFDILst" value="api/facturacion/registrar/factruas" />
     <add key="PostRegistrarCFDI" value="api/facturacion/registrar/factrua" />
+    <add key="PostTicket" value="api/facturacion/buscar/tickets" />
     <add key="GetTicket" value="api/facturacion/buscar/ticket/" />
     <add key="GetTicketsByCliente" value="api/facturacion/buscar/tickets/cliente/" />
     <add key="GetTicketsByRFC" value="api/facturacion/buscar/tickets/rfc/" />
@@ -247,16 +248,18 @@
     <add key="GetCFDI" value="api/facturacion/buscar/cfdi/" />
     <add key="GetCFDIByCliente" value="api/facturacion/buscar/cfdi/cliente/" />
     <add key="GetCFDIByRFC" value="api/facturacion/buscar/cfdi/rfc/" />
+    <add key="GetCFDIs" value="api/facturacion/buscar/cfdis" />
+
 
     <!--Facturacion-->
-    
+
     <!-- HistoricoVentas -->
     <add key="PostHistoricoVentas" value="api/historico/registar/historicoventas" />
     <add key="GetHistoricoVentas" value="api/historico/consultar/historicoventas" />
     <add key="GetHistoricoById" value="api/historico/consultar/historicoventasid/" />
     <add key="PutHistorico" value="api/historico/modificar/historicoventas" />
     <add key="DeleteHistorico" value="api/historico/eleiminar/historicoventas/" />
-    
+
     <!-- HistoricoVentas -->
 
     <add key="vs:EnableBrowserLink" value="false" />
