JSA - Facturacion Global

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -240,6 +240,7 @@
     <!--Facturacion-->
     <add key="PostRegistrarCFDILst" value="api/facturacion/registrar/factruas" />
     <add key="PostRegistrarCFDI" value="api/facturacion/registrar/factrua" />
+    <add key="PostRegistrarCFDIGlobal" value="api/facturacion/registrar/factrua/global" />
     <add key="PostTicket" value="api/facturacion/buscar/tickets" />
     <add key="GetTicket" value="api/facturacion/buscar/ticket/" />
     <add key="GetTicketsByCliente" value="api/facturacion/buscar/tickets/cliente/" />
@@ -249,8 +250,6 @@
     <add key="GetCFDIByCliente" value="api/facturacion/buscar/cfdi/cliente/" />
     <add key="GetCFDIByRFC" value="api/facturacion/buscar/cfdi/rfc/" />
     <add key="GetCFDIs" value="api/facturacion/buscar/cfdis" />
-
-
     <!--Facturacion-->
 
     <!-- HistoricoVentas -->
