--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -256,8 +256,9 @@
     <add key="GetHistoricoById" value="api/historico/consultar/historicoventasid/" />
     <add key="PutHistorico" value="api/historico/modificar/historicoventas" />
     <add key="DeleteHistorico" value="api/historico/eleiminar/historicoventas/" />
-    <add key ="GetJsonConsulta" value="api/historico/consultar/json"/>
-    <add key="GetYears" value="api/historico/consultar/years"/>
+    <add key="GetJsonConsulta" value="api/historico/consultar/json" />
+    <add key="GetYears" value="api/historico/consultar/years" />
+    <add key="GetYearsTotales" value="api/historico/consultar/yearstotales"/> 
     <!-- HistoricoVentas -->
 
     <add key="vs:EnableBrowserLink" value="false" />
