--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/packages.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/packages.config
@@ -4,8 +4,10 @@
   <package id="bootstrap" version="3.3.0" targetFramework="net452" />
   <package id="Bootstrap.DateTimePicker" version="0.0.11" targetFramework="net452" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net452" />
+  <package id="Echovoice.JSON" version="2.0.15151.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.es" version="6.1.3" targetFramework="net452" />
+  <package id="EPPlus" version="4.5.3.1" targetFramework="net452" />
   <package id="ExcelDataReader" version="3.4.1" targetFramework="net452" />
   <package id="ExcelDataReader.DataSet" version="3.4.1" targetFramework="net452" />
   <package id="ExcelDataReader-OptionalStreams" version="3.4.1" targetFramework="net452" />
