--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/DS.MainModule.csproj
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/DS.MainModule.csproj
@@ -355,6 +355,7 @@
     <None Include="Properties\PublishProfiles\ApiWS.pubxml" />
     <None Include="Properties\PublishProfiles\SagasWS.pubxml" />
     <None Include="Properties\PublishProfiles\WebApi.pubxml" />
+    <None Include="Properties\PublishProfiles\ws.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\cldr.js" />
     <Content Include="Scripts\cldr\event.js" />
